# Manikin_Software

./: .gitignore  .gitmodules  404.html  README.md  index.html  mkdocs.yml
.github/workflows/: build_and_unit_test_sensorhub_fw.yml  mkdocs.yml
ActuatorHub-breathingModule/: .gitignore  CMakeLists.txt  platformio.ini
ActuatorHub-breathingModule/docs/: ClassDiagram.puml  PWMandmotor.drawio  error.drawio
ActuatorHub-breathingModule/src/: Breathing.cpp  Breathing.hpp  BreathingControl.cpp  BreathingControl.hpp  BreathingData.hpp  Compression.cpp  Compression.hpp  main.cpp
DF_Player/: CMakeLists.txt  platformio.ini
DF_Player/src/: dfPlayer.cpp  dfPlayer.hpp  main.cpp
DF_Player/test/: CMakeLists.txt
Desktop_application/Flow_and_ToF_Testsuite/: nbactions-release-profile.xml  pom.xml
FileLogger/: .gitignore  main.py
FileLogger/Converters/: CSV_to_Excel.py  json_csv_converter.py  json_formatter.py
FileLogger/Serial_handler/: SerialReader.py
Format_Onboard_Flash_SensorHub/: platformio.ini
Format_Onboard_Flash_SensorHub/boards/board_files/SensorHub/: variant.h
Format_Onboard_Flash_SensorHub/src/: device_settings.hpp  main.cpp
General/flash_build_instructions/: index.html
Mainboard_SAMD51_FW/: .gitignore  CMakeLists.txt  platformio.ini
Mainboard_SAMD51_FW/src/: main.cpp  mainboard_settings.hpp
SensorHub/annotated/: index.html
SensorHub/classDeviceProperties/: index.html
SensorHub/class_member_enums/: index.html
SensorHub/class_member_functions/: index.html
SensorHub/class_member_typedefs/: index.html
SensorHub/class_member_variables/: index.html
SensorHub/class_members/: index.html
SensorHub/classes/: index.html
SensorHub/classmodule_1_1measurement__grabber_1_1MeasurementGrabber/: index.html
SensorHub/classmodule_1_1status_1_1DeviceStatus/: index.html
SensorHub/device__properties_8hpp/: index.html
SensorHub/device__properties_8hpp_source/: index.html
SensorHub/device__sensor__lib__settings_8hpp/: index.html
SensorHub/device__sensor__lib__settings_8hpp_source/: index.html
SensorHub/device__settings_8hpp/: index.html
SensorHub/device__settings_8hpp_source/: index.html
SensorHub/device__status_8hpp/: index.html
SensorHub/device__status_8hpp_source/: index.html
SensorHub/dir_8a3376b0b822df0b6266211cee305325/: index.html
SensorHub/dir_d67209f9e2b4e51eca02397244f6bfa8/: index.html
SensorHub/files/: index.html
SensorHub/functions/: index.html
SensorHub/hierarchy/: index.html
SensorHub/links/: index.html
SensorHub/macros/: index.html
SensorHub/main_8cpp/: index.html
SensorHub/main_8cpp_source/: index.html
SensorHub/measurement__grabber_8hpp/: index.html
SensorHub/measurement__grabber_8hpp_source/: index.html
SensorHub/modules/: index.html
SensorHub/namespace_member_enums/: index.html
SensorHub/namespace_member_functions/: index.html
SensorHub/namespace_member_typedefs/: index.html
SensorHub/namespace_member_variables/: index.html
SensorHub/namespace_members/: index.html
SensorHub/namespacemodule/: index.html
SensorHub/namespacemodule_1_1measurement__grabber/: index.html
SensorHub/namespacemodule_1_1status/: index.html
SensorHub/namespaces/: index.html
SensorHub/pages/: index.html
SensorHub/service__protocol_8hpp/: index.html
SensorHub/service__protocol_8hpp_source/: index.html
SensorHub/service_protocol/: index.html
SensorHub/structArgSpecs/: index.html
SensorHub/structmodule_1_1measurement__grabber_1_1MeasurementGrabberData/: index.html
SensorHub/variables/: index.html
SensorHub/volume__calculations_8hpp/: index.html
SensorHub/volume__calculations_8hpp_source/: index.html
SensorHub_FW/: .gitignore  CMakeLists.txt  platformio.ini
SensorHub_FW/boards/: SensorHub.json
SensorHub_FW/boards/board_files/SensorHub/: variant.cpp  variant.h
SensorHub_FW/lib/Sensor/: library.json
SensorHub_FW/lib/Sensor/include/: sensor_helper.hpp
SensorHub_FW/lib/Sensor/src/: sensor_helper.hpp
SensorHub_FW/src/: DeviceManager.hpp  SensorHubSettings.h  ServiceProtocol.hpp  Status.hpp  device_properties.hpp  device_sensor_lib_settings.hpp  device_settings.hpp  device_status.hpp  main.cpp  measurement_grabber.hpp  sensorhub_settings.hpp  service_protocol.hpp  volume_calculations.hpp
SensorHub_FW/test/: CMakeLists.txt  i2c_wrapper_mock_test.cc  sensor_lib_test.cc  sensor_lib_test.cpp
SensorHub_FW/test/compression_sensor_test/: CMakeLists.txt  compression_sen_testclass.hpp  compression_sensor_mock_test.cc  i2c_helper.hpp
SensorHub_FW/test/compression_sensor_test/test_code/: sensor_compression.cpp  sensor_compression.hpp
SensorHub_FW/test/differentialpressure_sensor_test/: CMakeLists.txt
SensorHub_FW/test/fingerposition_sensor_test/: CMakeLists.txt
SensorHub_FW/test/i2c_tests/: CMakeLists.txt  i2c_testclass.hpp  i2c_wrapper_mock_test.cc
SensorHub_FW_CMake/: .gitignore  CMakeLists.txt  debug_ozone.jdebug
SensorHub_FW_CMake/board_sdk/: CMakeLists.txt
SensorHub_FW_CMake/board_sdk/gcc/gcc/: samd21g18a_flash.ld
SensorHub_FW_CMake/lib/: CMakeLists.txt
SensorHub_FW_CMake/src/: Clock_stuff.h  Slave_driver.cpp  Slave_driver.hpp  board_definitions.h  device_manager.cpp  device_manager.hpp  evsys_imp.cpp  evsys_imp.hpp  i2c_register_stuff.h  main.c  main.cpp
SensorHub_FW_CMake_Logger/: .gitignore  CMakeLists.txt  debug_ozone.jdebug
SensorHub_FW_CMake_Logger/config/: FreeRTOSConfig.h  board_defines.h  tusb_config.h
SensorHub_FW_CMake_Logger/src/: FreeRTOS_hooks.c  board_defines.h  clock_init.h  fram_helper.h  libc_hooks.c  main.cpp  sensor_measurement.h  system_status_types.h  usb_descriptors.c  usb_protocol.h
SensorHub_FW_CMake_Logger/src/drivers/: usb_protocol.h
SensorHub_FW_CMake_Logger/src/hooks/: FreeRTOS_hooks.c  usb_descriptors.c
Testsuite/: .gitignore  CMakeLists.txt  gui_setup.h  main.cpp
Testsuite/src/: communication.cpp  communication.hpp  serial.cpp  serial.h  serial.hpp
assets/.doxy/SensorHub/: hashChanges.yaml
assets/.doxy/SensorHub/SensorHub/: classes.md  (+39 more)
docs/: index.md
docs/General/: flash_build_instructions.md
docs/SensorHub/: service_protocol.md
(+35 files in other folders)
